--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,14 +1,19 @@
 /* <!-- шапка-хедер --> */
 .header {
+  position: relative;
+
   border-bottom: 1px solid $border-header;
 }
 
 .nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-}
 
+  @media screen and (max-width: $tablet) {
+    justify-content: space-between;
+    height: 60px;
+  }
+}
 /* логотип */
 .logo {
   font-family: Raleway;
@@ -26,32 +31,96 @@
 }
 
 .nav__logo {
-  margin-right: 93px;
+  @media screen and (min-width: $tablet) {
+    margin-right: 88px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-right: 93px;
+  }
+}
+
+/*навигация и контакты  */
+.menu-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  .icon-close {
+    display: none;
+  }
+  &.is-open .icon-close {
+    display: block;
+  }
+  &.is-open .icon-menu {
+    display: none;
+  }
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
+
+.menu-container {
+  @media screen and (max-width: $tablet) {
+    &.is-open {
+      display: flex;
+      background-color: #fff;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+
+  @media screen and (max-width: $tablet) {
+    display: none;
+
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    padding: 40px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+  @media screen and (min-width: $desktop) {
+    justify-content: space-between;
+    width: 100%;
+  }
 }
 
 /* навигация сайта  */
 .nav__list {
-  display: flex;
-  align-items: center;
+  @media screen and (max-width: $tablet) {
+    font-size: 40px;
+  }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
   .current {
     color: $accent-color;
   }
 }
 
-.nav__item + .nav__item {
-  margin-left: 50px;
-  &--contacts {
-    margin-left: none;
+.nav__item {
+  @media screen and (max-width: $tablet) {
+    margin-bottom: 32px;
+  }
+  @media screen and (min-width: $tablet) {
+    margin-right: 50px;
+    display: flex;
+    align-items: center;
+    height: 80px;
+    position: relative;
   }
 }
 
-.nav__item {
-  position: relative;
-}
-
 .headar__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
   display: block;
   color: $basic-color;
   font-weight: 500;
@@ -60,20 +129,64 @@
 }
 
 .current::after {
-  display: block;
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  width: 100%;
-  background-color: $accent-color;
-  border-radius: 2px;
+  @media screen and (min-width: $tablet) {
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    width: 100%;
+    background-color: $accent-color;
+    border-radius: 2px;
+  }
 }
 
 /* контакты */
 .nav__contacts-list {
-  display: flex;
+  @media screen and (min-width: $tablet) {
+    align-items: center;
+    display: flex;
+  }
+}
+
+.contacts-box {
+  @media screen and (max-width: $tablet) {
+    position: relative;
+    height: 100px;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+}
+
+.contacts-list__item {
+  @media screen and (max-width: $tablet) {
+    position: absolute;
+    &:last-child {
+      top: 0;
+      left: 0;
+      font-size: 34px;
+    }
+    &:first-child {
+      bottom: 0;
+      left: 0;
+      font-size: 24px;
+    }
+  }
+
+  @media screen and (max-width: $tablet) {
+    &:last-of-type {
+      color: $accent-color;
+    }
+
+    &:first-of-type {
+      color: $description-color;
+    }
+  }
 }
 
 .contacts__icon {
@@ -82,10 +195,18 @@
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
 }
 
 .contacts-list__item + .contacts-list__item {
-  margin-left: 30px;
+  @media screen and (min-width: $tablet) {
+    margin-top: 10px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-top: 0;
+  }
 }
 
 .contacts-list__link-icon {
@@ -96,4 +217,34 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: $description-color;
+  @media screen and (max-width: $tablet) {
+    &:last-of-type {
+      color: inherit;
+    }
+  }
+}
+
+.contacts-list__socseti {
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+  display: flex;
+  justify-content: space-between;
+  width: 356px;
+  margin-top: 64px;
+}
+
+.contacts-list__socseti-item:nth-child(n + 2) {
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+  padding-left: 10px;
+}
+
+.contacts__socseti {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+
+  text-decoration: none;
 }
