--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,46 +1,62 @@
 .hero__button {
-    font-family: Roboto;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    background: $accent-color;
-    width: 216px;
-    height: 50px;
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  background: $accent-color;
+  width: 216px;
+  height: 50px;
 
-    border-radius: 4px;
-    border: none;
-    letter-spacing: 0.06em;
-    color: $second-basic;
-    cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  letter-spacing: 0.06em;
+  color: $second-basic;
+  cursor: pointer;
 }
 
 .hero {
-    max-height: 1600px;
-    margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background: $hero-footer-section-background;
-    text-align: center;
-    background-color: $hero-bacrground;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url("../images/het-site.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
+  max-height: 1600px;
+  margin: 0 auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background: $hero-footer-section-background;
+  text-align: center;
+  background-color: $hero-bacrground;
+
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/het-site.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url("../images/het-site-2x.jpg");
+  }
 }
 
 .hero__title {
-    margin-top: 0;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: $desktop) {
     width: 696px;
+  }
 
-    color: $second-basic;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  @media screen and (max-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+
+  color: $second-basic;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
