--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,14 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
@@ -113,11 +119,12 @@ img {
 .nav {
   display: flex;
   align-items: center;
+  height: 60px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .nav {
     justify-content: space-between;
-    height: 60px;
+    height: 80px;
   }
 }
 
@@ -174,7 +181,7 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .menu-container.is-open {
     display: flex;
     background-color: #fff;
@@ -184,13 +191,16 @@ img {
 }
 @media screen and (max-width: 768px) {
   .menu-container {
-    display: none;
+    background-color: #fff;
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100vh;
-    padding: 40px;
+    padding: 40px 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 @media screen and (min-width: 768px) {
@@ -206,7 +216,7 @@ img {
 }
 
 /* навигация сайта  */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .nav__list {
     font-size: 40px;
   }
@@ -220,14 +230,13 @@ img {
   color: #2196f3;
 }
 
-@media screen and (max-width: 768px) {
-  .nav__item {
-    margin-bottom: 32px;
-  }
+.nav__item {
+  margin-bottom: 32px;
 }
 @media screen and (min-width: 768px) {
   .nav__item {
     margin-right: 50px;
+    margin-bottom: 0;
     display: flex;
     align-items: center;
     height: 80px;
@@ -265,29 +274,36 @@ img {
   }
 }
 
-@media screen and (max-width: 768px) {
+.contacts-box {
+  position: relative;
+  height: 100px;
+}
+@media screen and (min-width: 768px) {
   .contacts-box {
-    position: relative;
-    height: 100px;
+    height: auto;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts-box {
     display: flex;
+    position: static;
+    height: auto;
     align-items: center;
     justify-content: center;
     gap: 30px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .contacts-list__item {
     position: absolute;
   }
   .contacts-list__item:last-child {
+    color: #2196f3;
     top: 0;
     left: 0;
     font-size: 34px;
+    width: max-content;
   }
   .contacts-list__item:first-child {
     bottom: 0;
@@ -295,25 +311,23 @@ img {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 768px) {
-  .contacts-list__item:last-of-type {
-    color: #2196f3;
-  }
+@media screen and (max-width: 767px) {
   .contacts-list__item:first-of-type {
     color: #757575;
   }
 }
 
 .contacts__icon {
+  display: none;
   margin-right: 10px;
   fill: #757575;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .contacts__icon {
-    display: none;
+    display: block;
   }
 }
 
@@ -336,7 +350,7 @@ img {
   letter-spacing: 0.02em;
   color: #757575;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .contacts-list__link-icon:last-of-type {
     color: inherit;
   }
@@ -384,54 +398,60 @@ img {
 }
 
 .hero {
-  max-height: 1600px;
+  max-width: 1600px;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
   background: #2f303a;
   text-align: center;
   background-color: #c4c4c4;
+  background-size: cover;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/het-site.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 1199px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
 @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/het-site-2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/het-site-2x.jpg");
   }
 }
 
 .hero__title {
+  color: #ffffff;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
 }
-@media screen and (min-width: 1200px) {
-  .hero__title {
-    width: 696px;
-  }
-}
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .hero__title {
     font-size: 26px;
+    max-width: 360px;
     line-height: 1.62;
   }
 }
-
-@media screen and (min-width: 768px) {
-  .benefits__list {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    max-width: 696px;
+    line-height: 1.36;
   }
+}
+
+.benefits__list {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 768px) {
@@ -566,10 +586,6 @@ img {
   margin-bottom: 16px;
 }
 
-.team__list-socseti {
-  justify-content: space-evenly;
-}
-
 .clients__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -579,13 +595,11 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 480px) {
-  .clients__list-sites {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    flex-wrap: wrap;
-  }
+.clients__list-sites {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 .clients__item {
@@ -716,7 +730,6 @@ img {
 
 .list-socseti__item--join {
   background: rgba(255, 255, 255, 0.1);
-  margin-right: 10px;
   border-radius: 50%;
 }
 .list-socseti__item--join:last-child {
@@ -827,7 +840,8 @@ img {
 }
 @media screen and (max-width: 768px) {
   .box-modal {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 690px;
     top: 93px;
   }
@@ -939,7 +953,7 @@ img {
   height: 120px;
   width: 100%;
   resize: none;
-  font-size: 16px;
+  font-size: 14px;
   color: #212121;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -947,6 +961,11 @@ img {
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .modal__place-comment {
+    font-size: 12px;
+  }
 }
 .modal__place-comment:hover, .modal__place-comment:focus {
   border-color: #2196f3;
@@ -1127,6 +1146,9 @@ img {
 
 .list-socseti {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 .list-socseti__box-icon-socseti {
   display: flex;
