--- a/scss/components/_socseti.scss
+++ b/scss/components/_socseti.scss
@@ -1,5 +1,9 @@
 .list-socseti {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
   &__box-icon-socseti {
     display: flex;
     justify-content: center;
