--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -66,6 +66,7 @@
 }
 
 .menu-container {
+  display: flex;
   @media screen and (min-width: $tablet) {
     &.is-open {
       display: flex;
@@ -83,8 +84,7 @@
     width: 100%;
     height: 100vh;
     padding: 40px 48px;
-
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
   }
